objects/AppPageSection__c.object
<CustomObject>
    <fields>
        <fullName>PageSectionName__c</fullName>
        <formula>Name  &amp; &apos;-&apos; &amp;  Page_Section__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Page Section Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page_Section__c</fullName>
        <label>Page Section</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Icon__c</fullName>
        <label>Section Icon</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Text__c</fullName>
        <label>Section Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>AppPageSection</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Page_Section__c</columns>
        <columns>PageSectionName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Page_Section__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Page</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AppPageSections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>